turn bell off; turn on opacity

--- a/kitty.conf
+++ b/kitty.conf
@@ -348,7 +348,7 @@
 
 #: Terminal bell {{{
 
-# enable_audio_bell yes
+# enable_audio_bell no
 
 #: Enable/disable the audio bell. Useful in environments that require
 #: silence.
@@ -592,7 +592,7 @@
 
 #: The foreground and background colors
 
-# background_opacity 1.0
+# background_opacity 0.25
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
