--- a/kitty.conf
+++ b/kitty.conf
@@ -6,7 +6,7 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-# font_family      monospace
+# font_family      monaco
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
@@ -592,7 +592,7 @@
 
 #: The foreground and background colors
 
-# background_opacity 0.25
+background_opacity 0.25
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
