basic appearance things for sanity

--- a/kitty.conf
+++ b/kitty.conf
@@ -6,10 +6,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-# font_family      monaco
-# bold_font        auto
-# italic_font      auto
-# bold_italic_font auto
+font_family      monaco
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -23,7 +23,7 @@
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-# font_size 11.0
+font_size 11.0
 
 #: Font size (in pts)
 
@@ -57,7 +57,7 @@
 #: than 100% to reduce sizes (but this might cause rendering
 #: artifacts).
 
-# symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 PowerlineSymbols
+symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 PowerlineSymbols
 
 #: Map the specified unicode codepoints to a particular font. Useful
 #: if you need special rendering for some symbols, such as for
@@ -511,7 +511,7 @@
 
 #: Tab bar {{{
 
-# tab_bar_edge bottom
+tab_bar_edge top
 
 #: Which edge to show the tab bar on, top or bottom
 
@@ -519,7 +519,7 @@
 
 #: The margin to the left and right of the tab bar (in pts)
 
-# tab_bar_style fade
+tab_bar_style powerline
 
 #: The tab bar style, can be one of: fade, separator, powerline, or
 #: hidden. In the fade style, each tab's edges fade into the
@@ -592,7 +592,7 @@
 
 #: The foreground and background colors
 
-background_opacity 0.25
+background_opacity 0.4
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
@@ -861,7 +861,7 @@ background_opacity 0.25
 
 #: Hide the kitty window from running tasks (Option+Tab) on macOS.
 
-# macos_quit_when_last_window_closed no
+macos_quit_when_last_window_closed yes
 
 #: Have kitty quit when all the top-level windows are closed. By
 #: default, kitty will stay running, even with no open windows, as is
@@ -872,7 +872,7 @@ background_opacity 0.25
 #: Disable this if you want kitty top-level (OS) windows to not be
 #: resizable on macOS.
 
-# macos_thicken_font 0
+ macos_thicken_font 0.4
 
 #: Draw an extra border around the font with the given width, to
 #: increase legibility at small font sizes. For example, a value of
