fix Powerline font issue

--- a/kitty.conf
+++ b/kitty.conf
@@ -6,7 +6,7 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      monaco
+font_family      Meslo LG L DZ for Powerline
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
@@ -58,6 +58,7 @@ font_size 11.5
 #: artifacts).
 
 symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 PowerlineSymbols
+#: symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 Meslo LG L DZ for Powerline
 
 #: Map the specified unicode codepoints to a particular font. Useful
 #: if you need special rendering for some symbols, such as for
