--- a/kitty.conf
+++ b/kitty.conf
@@ -512,7 +512,7 @@ symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 PowerlineSymbols
 
 #: Tab bar {{{
 
-tab_bar_edge top
+tab_bar_edge bottom
 
 #: Which edge to show the tab bar on, top or bottom
 
