enable options for layouts

--- a/kitty.conf
+++ b/kitty.conf
@@ -389,10 +389,24 @@ symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 Meslo LG L DZ for Powerline
 #: suffix of "c" on the width/height values to have them interpreted
 #: as number of cells instead of pixels.
 
-# enabled_layouts *
+enabled_layouts *
+
+map F5 launch --location=hsplit
+map F6 launch --location=vsplit
+map F7 layout_action rotate
+
+map shift+up move_window up
+map shift+left move_window left
+map shift+right move_window right
+map shift+down move_window down
+
+map ctrl+left neighboring_window left
+map ctrl+right neighboring_window right
+map ctrl+up neighboring_window up
+map ctrl+down neighboring_window down
 
 #: The enabled window layouts. A comma separated list of layout names.
-#: The special value all means all layouts. The first listed layout
+#: The special value (*) all means all layouts. The first listed layout
 #: will be used as the startup layout. Default configuration is all
 #: layouts in alphabetical order. For a list of available layouts, see
 #: the https://sw.kovidgoyal.net/kitty/index.html#layouts.
