--- a/kitty.conf
+++ b/kitty.conf
@@ -876,7 +876,7 @@ macos_option_as_alt yes
 
 #: Hide the kitty window from running tasks (Option+Tab) on macOS.
 
-macos_quit_when_last_window_closed yes
+macos_quit_when_last_window_closed no
 
 #: Have kitty quit when all the top-level windows are closed. By
 #: default, kitty will stay running, even with no open windows, as is
