--- a/kitty.conf
+++ b/kitty.conf
@@ -389,7 +389,7 @@ symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 Meslo LG L DZ for Powerline
 #: suffix of "c" on the width/height values to have them interpreted
 #: as number of cells instead of pixels.
 
-enabled_layouts *
+enabled_layouts splits:split_axis=vertical
 
 map F5 launch --location=hsplit
 map F6 launch --location=vsplit
@@ -400,10 +400,10 @@ map shift+left move_window left
 map shift+right move_window right
 map shift+down move_window down
 
-map ctrl+left neighboring_window left
-map ctrl+right neighboring_window right
-map ctrl+up neighboring_window up
-map ctrl+down neighboring_window down
+map cmd+left neighboring_window left
+map cmd+right neighboring_window right
+map cmd+up neighboring_window up
+map cmd+down neighboring_window down
 
 #: The enabled window layouts. A comma separated list of layout names.
 #: The special value (*) all means all layouts. The first listed layout
