some window options

--- a/kitty.conf
+++ b/kitty.conf
@@ -405,6 +405,13 @@ map cmd+right neighboring_window right
 map cmd+up neighboring_window up
 map cmd+down neighboring_window down
 
+# moves the window into a new OS window
+map cmd+f2 detach_window
+# moves the window into a new Tab
+map cmd+f3 detach_window new-tab
+# asks which tab to move the window into
+map cmd+f4 detach_window ask
+
 #: The enabled window layouts. A comma separated list of layout names.
 #: The special value (*) all means all layouts. The first listed layout
 #: will be used as the startup layout. Default configuration is all
