switch between tabs

--- a/kitty.conf
+++ b/kitty.conf
@@ -1141,10 +1141,10 @@ macos_quit_when_last_window_closed no
 
 # map kitty_mod+right next_tab
 # map ctrl+tab        next_tab
-# map shift+cmd+]     next_tab
+map shift+cmd+k     next_tab
 # map kitty_mod+left  previous_tab
 # map shift+ctrl+tab  previous_tab
-# map shift+cmd+[     previous_tab
+map shift+cmd+j     previous_tab
 # map kitty_mod+t     new_tab
 # map cmd+t           new_tab
 # map kitty_mod+q     close_tab
